# playwright-py-skill

./: pyproject.toml  pyrightconfig.json
skills/playwright-py-skill/: API_REFERENCE.md  run.py
skills/playwright-py-skill/lib/: helpers.py
tests/: conftest.py  requirements.txt  test_basic_browser_automation.py  test_custom_headers.py  test_form_interactions.py  test_keyboard_actions.py  test_login_flow.py  test_mouse_actions.py  test_multiple_viewports.py  test_screenshot_error_handling.py  test_selectors_locators.py  test_server.py  test_test_structure.py
tests/static/: form-interactions.js  keyboard-actions.js  login.js  mouse-actions.js  selectors.js
tests/templates/: accessibility.html  contact.html  dashboard.html  form-interactions.html  geolocation.html  home.html  keyboard-actions.html  login.html  login_error.html  mouse-actions.html  selectors.html  success.html
